--- a/index.html
+++ b/index.html
@@ -1,26 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>PollyGlot</title>
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <div class="main">
-            <div class="header">
-                <img src="./assets/parrot.png" alt="Logo" class="logo">
-                <div class="texts">
-                    <h1>PollyGlot</h1>
-                    <h2>Perfect Translation Every Time</h2>
-                </div>
-            </div>
-        </div>
-        <div class="translate">
-          <h1>Text to Translate</h1>
-          <input type="text">
-        </div>
-
-        <script src="index.js" type="module"></script>
-    </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PollyGlot</title>
+  <link rel="stylesheet" href="index.css">
+</head>
+<body>
+  <div class="main">
+    <div class="header">
+      <img src="./assets/parrot.png" alt="Logo" class="logo">
+      <div class="texts">
+        <h1>PollyGlot</h1>
+        <h2>Perfect Translation Every Time</h2>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <h1>Text to Translate 👇</h1>
+    <input type="text" placeholder="How are you?">
+    <h2>Select Language 👇</h2>
+    <div class="language-option">
+      <label>
+        <input type="radio" name="language" value="French" checked>
+        <span class="label-text">
+          French <img src="./assets/fr-flag.png" alt="French Flag" class="flag">
+        </span>
+      </label>
+    </div>
+    <div class="language-option">
+      <label>
+        <input type="radio" name="language" value="Spanish">
+        <span class="label-text">
+          Spanish <img src="./assets/sp-flag.png" alt="Spanish Flag" class="flag">
+        </span>
+      </label>
+    </div>
+    <div class="language-option">
+      <label>
+        <input type="radio" name="language" value="Japanese">
+        <span class="label-text">
+          Japanese <img src="./assets/jpn-flag.png" alt="Japanese Flag" class="flag">
+        </span>
+      </label>
+    </div>
+    <button class="t-btn">Translate</button>
+  </div>
+  <script src="index.js" type="module"></script>
+</body>
 </html>
